# ProjectOPP

./: CMakeLists.txt  README.md  da.csv  dat.csv  data.csv  main.cpp
Extra/: ConsoleExporter.h  Exporter.h  OutputStream.h  SimpleData.h  TextExporter.h
analysis/: Analysis.h  MeanAnalysis.cpp  MeanAnalysis.h  MedianAnalysis.cpp  MedianAnalysis.h  MinMaxAnalysis.cpp  MinMaxAnalysis.h  ModeAnalysis.cpp  ModeAnalysis.h  StdDevAnalysis.cpp  StdDevAnalysis.h  SumAnalysis.cpp  SumAnalysis.h
core/: CSVLoader.cpp  CSVLoader.h  Report.cpp  Report.h  Result.h
